creacion del componente historial

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,5 +19,5 @@
   </div>
 </nav>
 <div class="container p-4">
-  <app-destinatarios></app-destinatarios>
+  <router-outlet></router-outlet>
 </div>
