--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
           <button type="button" class="btn btn-primary btn-lg">Nuevo Destinatario</button>
         </li>
         <li class="nav-item">
-          <button type="button" class="btn btn-primary btn-lg">Transferir</button>
+          <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/transferencia']">Transferir</button>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-primary btn-lg" routerLink="">Historial</button>
