--- a/frontend/src/app/components/transferencia/transferencia.component.html
+++ b/frontend/src/app/components/transferencia/transferencia.component.html
@@ -48,9 +48,9 @@
 </div>
 <div class="form-group col-2">
     <label for="monto">Monto</label>
-    <input class="form-control buscar" id="monto" type="text" name="monto" [readonly]="readonly"/>
+    <input class="form-control buscar" id="monto" type="text" name="monto" [readonly]="readonly" [(ngModel)]="transferencia.monto"/>
 </div>
 <br>
 <div class="offset-md-1">
-    <button type="button" class="btn btn-primary btn-lg rounded">Transferir</button>
+    <button type="submit" class="btn btn-primary btn-lg rounded" id="transferir" (click)="transferir()">Transferir</button>
 </div>
