--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,17 +2,17 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Banco Kevin Tobar Moore</a>
+    <a class="navbar-brand" [routerLink]="['']">Banco Kevin Tobar Moore</a>
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <button type="button" class="btn btn-primary btn-lg">Nuevo Destinatario</button>
+          <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/nuevo']">Nuevo Destinatario</button>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/transferencia']">Transferir</button>
         </li>
         <li class="nav-item">
-          <button type="button" class="btn btn-primary btn-lg" routerLink="">Historial</button>
+          <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/historial']">Historial</button>
         </li>
       </ul>
     </div>
