se repara bug que no dejaba transferir

--- a/frontend/src/app/components/transferencia/transferencia.component.html
+++ b/frontend/src/app/components/transferencia/transferencia.component.html
@@ -48,7 +48,7 @@
 </div>
 <div class="form-group col-2">
     <label for="monto">Monto</label>
-    <input class="form-control buscar" id="monto" type="text" name="monto" [readonly]="readonly" [(ngModel)]="transferencia.monto"/>
+    <input class="form-control buscar" id="monto" type="text" name="monto" [readonly]="readonly" [(ngModel)]="monto"/>
 </div>
 <br>
 <div class="offset-md-1">
