--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,23 +1,4 @@
-
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container">
-    <a class="navbar-brand" [routerLink]="['']">Banco Kevin Tobar Moore</a>
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/nuevo']">Nuevo Destinatario</button>
-        </li>
-        <li class="nav-item">
-          <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/transferencia']">Transferir</button>
-        </li>
-        <li class="nav-item">
-          <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/historial']">Historial</button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 <div class="container p-4">
   <router-outlet></router-outlet>
 </div>
